Social media bug fix -> display on mobile issue

--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -306,7 +306,7 @@ a.navbar-brand {
 #nav-button {
     display: none;
     position: fixed;
-    bottom: 15px;
+    bottom: 65px;
     left: 30px;
     z-index: 99;
     border: none;
